--- a/Sprint3/Site/web-data-viz/.env.dev
+++ b/Sprint3/Site/web-data-viz/.env.dev
@@ -4,7 +4,7 @@ AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST=localhost
 DB_DATABASE='flowtech'
 DB_USER='root'
-DB_PASSWORD='palmeiras21'
+DB_PASSWORD=''
 DB_PORT=3306
 
 # Configurações do servidor de aplicação
