--- a/Sprint3/Site/web-data-viz/.env.dev
+++ b/Sprint3/Site/web-data-viz/.env.dev
@@ -3,16 +3,12 @@ AMBIENTE_PROCESSO=desenvolvimento
 # Configurações de conexão com o banco de dados
 DB_HOST=localhost
 DB_DATABASE='flowtech'
-DB_USER='root'
-<<<<<<< HEAD
-DB_PASSWORD='#Gf53598968841'
-=======
-DB_PASSWORD='palmeiras21'
->>>>>>> 6faa60f61ce216c3524c7caaf16d5cb6cd514470
-DB_PORT=3306
+DB_USER='flowtech'
+DB_PASSWORD='FlowTech#2024'
+DB_PORT=3307
 
 # Configurações do servidor de aplicação
-APP_PORT=3333
+APP_PORT=3334
 APP_HOST=localhost
 
 # importante: caso sua senha contenha caracteres especiais, insira-a entre 'aspas'
